--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
                 <li><a href="./produto.html">Produto</a></li>
                 <li><a href="./serviço.html">Serviço</a></li>
                 <li><a href="./contato.html">Contato</a></li>
-                <li><button class="cta-button">Clique aqui</button></li>
+                <li><button class="cta-button">Whatsapp</button></li>
             </ul>
+            <button id="loginButton" class="login-button">Login</button>
         </nav>
 
         <main>
@@ -32,7 +33,7 @@
                     vida saudável e cheia de energia. Venha conferir nossos produtos e ver a diferença
                     na vitalidade do seu pet!
                 </p>
-                <button class="main-cta">Venha conferir</button>
+                <button id="venhaConferir" class="main-cta">Venha conferir</button>
             </div>
             <div class="image-container">
                 <div class="image-background"></div>
