--- a/sobre.html
+++ b/sobre.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós - Pet Care</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <nav>
@@ -22,12 +24,17 @@
 
         <main class="page-content">
             <h1>Sobre Nós</h1>
-            <p>Somos uma empresa dedicada ao bem-estar dos animais de estimação. Nossa missão é fornecer produtos e serviços de alta qualidade para garantir que seu pet tenha uma vida saudável e feliz.</p>
-            <p>Fundada em 2010, nossa equipe é composta por amantes de animais apaixonados e profissionais qualificados em cuidados com pets.</p>
+            <p>
+                Somos uma empresa dedicada ao bem-estar dos animais de estimação. Nossa missão é fornecer produtos e
+                serviços de alta qualidade para garantir que seu pet tenha uma vida saudável e feliz.
+                Fundada em 2010, nossa equipe é composta por amantes de animais apaixonados e profissionais
+                qualificados em cuidados com pets.</p>
             <img src="https://via.placeholder.com/600x400" alt="Equipe Pet Care" class="about-image">
+
         </main>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
